# papertrail

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  README.md  config.example.toml  justfile  pyproject.toml
.github/workflows/: ci.yml
resources/: com.cwygoda.document-inbox.plist  com.cwygoda.papertrail.plist  config.example.toml
src/document_inbox/: __main__.py  config.py  watcher.py
src/document_inbox/adapters/llm/: __init__.py  claude_api.py  claude_cli.py  ollama.py
src/document_inbox/adapters/metadata/: pikepdf.py
src/document_inbox/adapters/ocr/: ocrmypdf_adapter.py
src/document_inbox/adapters/platform/: __init__.py  macos.py
src/document_inbox/adapters/storage/: filesystem.py
src/document_inbox/domain/: models.py  services.py
src/papertrail/: __init__.py  __main__.py  cleanup.py  config.py  watcher.py
src/papertrail/adapters/llm/: __init__.py  claude_api.py  claude_cli.py  ollama.py  prompts.py  validation.py
src/papertrail/adapters/metadata/: __init__.py  pikepdf.py  xmp.py
src/papertrail/adapters/ocr/: __init__.py  ocrmypdf_adapter.py
src/papertrail/adapters/platform/: macos.py
src/papertrail/adapters/storage/: __init__.py  filesystem.py
src/papertrail/domain/: __init__.py  models.py  services.py
src/papertrail/ports/: __init__.py  llm.py  metadata.py  ocr.py  storage.py
tests/: conftest.py
tests/bdd/: test_processing.py
tests/bdd/features/: processing.feature
tests/unit/: test_cli_helpers.py  test_filesystem.py  test_models.py  test_validation.py  test_xmp.py
