[project]
name = "papertrail"
version = "0.1.0"
description = "Monitor iCloud Preview folder for scanned docs, move to inbox"
readme = "README.md"
authors = [
    { name = "Christian Wygoda", email = "christian.wygoda@wygoda.net" }
]
requires-python = ">=3.12"
dependencies = [
    "watchdog>=4.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "ocrmypdf>=16.0.0",
    "anthropic>=0.40.0",
    "pikepdf>=9.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "pyobjc-framework-Cocoa>=10.0.0; sys_platform == 'darwin'",
]

[project.scripts]
papertrail = "papertrail.__main__:cli"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
