[project]
name = "papertrail"
version = "0.2.0"
description = "Monitor iCloud Preview folder for scanned docs, move to inbox"
readme = "README.md"
authors = [
    { name = "Christian Wygoda", email = "christian.wygoda@wygoda.net" }
]
requires-python = ">=3.12"
dependencies = [
    "watchdog>=4.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "ocrmypdf>=16.0.0",
    "anthropic>=0.40.0",
    "pikepdf>=9.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "pyobjc-framework-Cocoa>=10.0.0; sys_platform == 'darwin'",
    "osxmetadata>=1.0.0; sys_platform == 'darwin'",
]

[project.scripts]
papertrail = "papertrail.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=8.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.15",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/bdd"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.src]
exclude = ["tests/"]

[[tool.ty.overrides]]
include = ["src/papertrail/adapters/platform/macos.py"]
rules = { unresolved-import = "ignore" }
